images are lazy

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Responsive -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     @RenderSection("Title", required: true)
     @RenderSection("Description", required: true)
     @RenderSection("Keywords", required: true)
@@ -166,9 +169,6 @@
         }
  
     </style>
-    <!-- Responsive -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
@@ -205,8 +205,8 @@
     </div>
     <div class="page-wrapper">
 
-        <!-- Preloader -->
-        <div class="preloader"></div>
+       @*  <!-- Preloader -->
+        <div class="preloader"></div> *@
 
         <!-- Main Header-->
         <header class="main-header">
@@ -358,7 +358,7 @@
                                 <div class="footer-column col-lg-4 col-md-6 col-sm-12">
                                     <div class="footer-widget logo-widget">
                                         <div class="logo">
-                                            <a href="index.html"><img src="~/images/footer-logo.png" alt="Birileri İthalat Logo" class="logo-image" /></a>
+                                            <a href="index.html"><img src="~/images/footer-logo.png" loading="lazy" alt="Birileri İthalat Logo" class="logo-image" /></a>
                                         </div>
                                         <div class="text">
                                             Birileri Dış Ticaret  olarak, uluslararası kalite standartlarına uygun şekilde ithalat gerçekleştiriyoruz.
