--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
             <!--image Column-->
             <div class="image-column col-lg-5 col-md-12 col-sm-12">
                 <div class="image">
-                    <img src="~/images/resource/image-3.avif" alt="about" />
+                    <img loading="lazy" src="~/images/resource/image-3.avif" alt="about" />
                 </div>
             </div>
 
