--- a/Views/Shared/_PartialCart.cshtml
+++ b/Views/Shared/_PartialCart.cshtml
@@ -29,7 +29,7 @@
                                     <div class="column-box">
                                         <figure class="prod-thumb">
                                             <a asp-controller="Home" asp-action="ProductDetailed" asp-productCode="@item.ProductCode">
-                                                <img src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ImagePath))" alt="@item.ProductName">
+                                                <img src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ImagePath))" loading="lazy" alt="@item.ProductName">
                                             </a>
                                         </figure>
                                     </div>
