--- a/Views/Shared/_PartialProductVariantImage.cshtml
+++ b/Views/Shared/_PartialProductVariantImage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BirileriWebSitesi.Models.ViewModels.ProductDetailedVariantImageViewModel
 <figure class="image-box">
     <a href="@Model.FilePath" class="lightbox-image" title="@Model.ProductVariantName">
-        <img src="@Url.Content(Model.FilePath)" alt="@Model.ProductVariantName">
+        <img src="@Url.Content(Model.FilePath)" loading="lazy" alt="@Model.ProductVariantName">
     </a>
     <input type="hidden" id="variant-name" value="@Model.ProductVariantName" />
 </figure>
