--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -10,7 +10,7 @@
                                         toptan spor malzemesi">
 }
 @Html.AntiForgeryToken()
-@Html.Partial("_PartialContactUs");
+@Html.PartialAsync("_PartialContactUs");
 
 @section AdditionalScripts {
     <script>
