--- a/Views/Shared/_CatalogPartial.cshtml
+++ b/Views/Shared/_CatalogPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BirileriWebSitesi.Models.Catalog>
+﻿@model IEnumerable<String>
 <!--Catalogs Section-->
 <section class="services-section">
     <div class="auto-container">
