--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -232,7 +232,7 @@
                                         <a asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                                     </li>
                                     <li class="dropdown shop">
-                                        <a asp-controller="Home" asp-action="Shop">Mağaza</a>
+                                        <a asp-controller="Shop" asp-action="Index">Mağaza</a>
                                     </li>
                                     @* <li class="dropdown blog">
                                         <a asp-controller="Home" asp-action="Blog">Blog</a>
@@ -303,7 +303,7 @@
                                         <a asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                                     </li>
                                     <li class="dropdown shop">
-                                        <a asp-controller="Home" asp-action="Shop">Mağaza</a>
+                                        <a asp-controller="Shop" asp-action="Index">Mağaza</a>
                                     </li>
                                     @* <li class="dropdown blog">
                                         <a asp-controller="Home" asp-action="Blog">Blog</a>
