--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -17,7 +17,7 @@
 <input name="__RequestVerificationToken" type="hidden" value="TOKEN_VALUE" />
 <!--Cart Section-->
 <section class="cart-section" id="cart-content">
-    @Html.Partial("_PartialCart",Model)
+    @Html.PartialAsync("_PartialCart",Model)
 </section>
 <!--End Cart Section-->
 @section FancyBox {
